# whisper-stt-bench

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.woodpecker/: ci.yml  deploy-local.yml  docker-cleanup.yml  shared-pipeline-hashes.json
infra/ci-deploy/: Dockerfile
infra/secrets-manager-agent/: Dockerfile  entrypoint.sh
scripts/: benchmark.py  check_shared_pipeline_hashes.py  deploy_lock.sh  docker_host_guard.sh  prepare_corpus.py  sync_canonical_checkout.sh  wait-for-health.sh  woodpecker_deploy.sh  woodpecker_fanout.py
src/whisper_bench/: __init__.py  auth.py  config.py  server.py  transcriber.py
tests/: test_auth.py  test_server.py  test_transcriber.py  test_woodpecker_fanout.py
woodpecker-agent/: agent.env.example  bootstrap-agent.sh  docker-compose.yml  install-watchdog.sh  watchdog.sh  woodpecker-watchdog.service  woodpecker-watchdog.timer
